--- a/05_DecisionTree/DecisionTree.ipynb
+++ b/05_DecisionTree/DecisionTree.ipynb
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "13     high     rainy   no  mild   true"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,6 +950,367 @@
     "\n",
     "graph = graphviz.Source(dot_data)\n",
     "graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 CART\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 定义二叉特征分裂函数\n",
+    "def feature_split(X, feature_i, threshold):\n",
+    "    split_func = None\n",
+    "    if isinstance(threshold, int) or isinstance(threshold, float):\n",
+    "        split_func = lambda sample: sample[feature_i] >= threshold\n",
+    "    else:\n",
+    "        split_func = lambda sample: sample[feature_i] == threshold\n",
+    "\n",
+    "    X_left = np.array([sample for sample in X if split_func(sample)])\n",
+    "    X_right = np.array([sample for sample in X if not split_func(sample)])\n",
+    "\n",
+    "    return np.array([X_left, X_right])\n",
+    "\n",
+    "\n",
+    "### 计算基尼指数\n",
+    "def calculate_gini(y):\n",
+    "    # 将数组转化为列表\n",
+    "    y = y.tolist()\n",
+    "    probs = [y.count(i)/len(y) for i in np.unique(y)]\n",
+    "    gini = sum([p*(1-p) for p in probs])\n",
+    "    return gini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TreeNode():\n",
+    "    def __init__(self, \n",
+    "                 feature_i=None,\n",
+    "                 threshold=None,\n",
+    "                 leaf_value=None,\n",
+    "                 left_branch=None,\n",
+    "                 right_branch=None):\n",
+    "        \n",
+    "        self.feature_i = feature_i        # 特征索引\n",
+    "        self.threshold = threshold        # 特征划分threshold\n",
+    "        self.leaf_value = leaf_value      # 叶子结点取值\n",
+    "        self.left_branch = left_branch    # 左子树\n",
+    "        self.right_branch = right_branch  # 右子树"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BinaryDecisionTree():\n",
+    "    '''\n",
+    "    二叉决策树\n",
+    "    '''\n",
+    "    def __init__(self, min_sample_split=2, min_gini_impurity=999,\n",
+    "                 max_depth=float('inf'), loss=None):\n",
+    "        self.root = None\n",
+    "        self.min_sample_split = min_sample_split    # node最小分裂数，默认为2\n",
+    "        self.mini_gini_impurity = min_gini_impurity # node初始化gini不纯度\n",
+    "        self.max_depth = max_depth                  # 二叉树最大深度\n",
+    "        self.gini_impurity_calculation = None       # 基尼不纯度计算函数\n",
+    "        self._leaf_value_calculation = None         # 叶子结点预测函数\n",
+    "        self.loss = loss                            # 损失函数\n",
+    "\n",
+    "    ### 拟合函数\n",
+    "    def fit(self, X, y, loss = None):\n",
+    "        # 递归构建\n",
+    "        self.root = self._build_tree(X,y)\n",
+    "        self.loss = None\n",
+    "\n",
+    "    ### 决策树构建\n",
+    "    def _build_tree(self, X, y, current_depth=0):\n",
+    "        # 初始化最小基尼不纯度\n",
+    "        init_gini_impurity = 999\n",
+    "        # 初始化最佳特征索引和阈值\n",
+    "        best_criteria = None\n",
+    "        # 初始化数据子集\n",
+    "        best_sets = None\n",
+    "\n",
+    "        # 合并输入和标签\n",
+    "        Xy = np.concatenate((X,y), axis=1)\n",
+    "        # 获取样本数和特征数\n",
+    "        n_samples, n_features = X.shape\n",
+    "        # 设定决策树构建条件\n",
+    "        # 训练样本数量大于node的最小分裂样本数且当前tree的深度小于最大深度\n",
+    "        if n_samples >= self.min_sample_split and current_depth <= self.max_depth:\n",
+    "            # 遍历计算每个特征的gini impurity\n",
+    "            for feature_i in range(n_features):\n",
+    "                # 获取i特征的所有取值\n",
+    "                feature_values = np.expand_dims(X[:, feature_i], axis=1)\n",
+    "                # 获取i特征的唯一取值\n",
+    "                unique_values = np.unique(feature_values)\n",
+    "\n",
+    "                # 遍历取值并寻找最佳特征分裂阈值\n",
+    "                for threshold in unique_values:\n",
+    "                    # 特征node二叉分裂\n",
+    "                    Xy1, Xy2 = feature_split(Xy, feature_i, threshold)\n",
+    "                    # 如果分裂后的子集大小都不为0\n",
+    "                    if len(Xy1) >0 and len(Xy2) > 0:\n",
+    "                        # 获取两个子集的标签\n",
+    "                        y1 = Xy1[:, n_features:]\n",
+    "                        y2 = Xy2[:, n_features:]\n",
+    "\n",
+    "                        # 计算gini impurity\n",
+    "                        impurity = self.impurity_calculation(y, y1, y2)\n",
+    "\n",
+    "                        # 获取最小gini impurity\n",
+    "                        # 最佳特征索引和分类阈值\n",
+    "                        if impurity < init_gini_impurity:\n",
+    "                            init_gini_impurity = impurity\n",
+    "                            best_criteria = {'feature_i': feature_i, 'threshold': threshold}\n",
+    "                            best_sets = {\n",
+    "                                'leftX': Xy1[:, :n_features],\n",
+    "                                'lefty': Xy1[:,n_features:],\n",
+    "                                'rightX': Xy2[:, :n_features],\n",
+    "                                'righty': Xy2[:, n_features:]\n",
+    "                            }\n",
+    "        # 如果小于当前的最小不纯度\n",
+    "        if init_gini_impurity < self.mini_gini_impurity:\n",
+    "            # 构建左右子树\n",
+    "            left_branch = self._build_tree(best_sets[\"leftX\"], best_sets['lefty'], current_depth+1)\n",
+    "            right_branch = self._build_tree(best_sets['rightX'], best_sets['righty'], current_depth+1)\n",
+    "\n",
+    "            return TreeNode(feature_i=best_criteria['feature_i'], threshold=best_criteria['threshold'],\n",
+    "                            left_branch=left_branch, right_branch=right_branch)\n",
+    "        \n",
+    "        # 计算叶子取值\n",
+    "        leaf_value = self._leaf_value_calculation(y)\n",
+    "        return TreeNode(leaf_value=leaf_value)\n",
+    "    \n",
+    "\n",
+    "    ### 二叉树值预测函数\n",
+    "    def predict_value(self, x, tree=None):\n",
+    "        if tree is None:\n",
+    "            tree = self.root\n",
+    "        # 如果叶子结点已有值，则直接返回已有值\n",
+    "        if tree.leaf_value is not None:\n",
+    "            return tree.leaf_value\n",
+    "        \n",
+    "        # 选择特征并获取特征值\n",
+    "        feature_value = x[tree.feature_i]\n",
+    "\n",
+    "        # 判断落入左子树还是右子树\n",
+    "        branch = tree.right_branch\n",
+    "        if isinstance(feature_value, int) or isinstance(feature_value, float):\n",
+    "            if feature_value >= tree.threshold:\n",
+    "                branch = tree.left_branch\n",
+    "        elif feature_value == tree.threshold:\n",
+    "            branch = tree.left_branch\n",
+    "\n",
+    "        # 测试子集\n",
+    "        return self.predict_value(x, branch)\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        y_pred = [self.predict_value(sample) for sample in X]\n",
+    "        return y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.1 CART regression tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RegressionTree(BinaryDecisionTree):\n",
+    "    def _calculate_variance_reduction(self, y, y1, y2):\n",
+    "        var_tot = np.var(y, axis=0)\n",
+    "        var_y1 = np.var(y1, axis=0)\n",
+    "        var_y2 = np.var(y2,axis=0)\n",
+    "        frac_1 = len(y1)/len(y)\n",
+    "        frac_2 = len(y2)/len(y)\n",
+    "        # 计算方差减少量\n",
+    "        variance_reduction = var_tot - (frac_1*var_y1 + frac_2*var_y2)\n",
+    "\n",
+    "        return sum(variance_reduction)\n",
+    "    \n",
+    "    # node值取平均\n",
+    "    def _mean_of_y(self, y):\n",
+    "        value = np.mean(y, axis=0)\n",
+    "        return value if len(value)>1 else value[0]\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self.impurity_calculation = self._calculate_variance_reduction\n",
+    "        self._leaf_value_calculation = self._mean_of_y\n",
+    "        super(RegressionTree, self).fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.2 CART Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassificationTree(BinaryDecisionTree):\n",
+    "    def _calculate_gini_impurity(self, y, y1, y2):\n",
+    "        p = len(y1)/len(y2)\n",
+    "        gini = calculate_gini(y)\n",
+    "        gini_impurity = p*calculate_gini(y1) + (1-p)*calculate_gini(y2)\n",
+    "        return gini_impurity\n",
+    "    \n",
+    "    def _majority_vote(self, y):\n",
+    "        most_common = None\n",
+    "        max_count = 0\n",
+    "        for label in np.unique(y):\n",
+    "            # 统计数量多的\n",
+    "            count = len(y[y==label])\n",
+    "            if count > max_count:\n",
+    "                most_common = label\n",
+    "                max_count = count\n",
+    "        return most_common\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self.impurity_calculation = self._calculate_gini_impurity\n",
+    "        self._leaf_value_calculation = self._majority_vote\n",
+    "        super(ClassificationTree, self).fit(X,y)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/l3/gdxbk2l908b4jq5bhgm39cl00000gn/T/ipykernel_88093/2521257058.py:12: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  return np.array([X_left, X_right])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets\n",
+    "data = datasets.load_iris()\n",
+    "X, y = data.data, data.target\n",
+    "# 注意！是否要对y进行reshape取决于numpy版本\n",
+    "y = y.reshape(-1,1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
+    "clf = ClassificationTree()\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print(accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9555555555555556\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "clf = DecisionTreeClassifier()\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "print(accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/l3/gdxbk2l908b4jq5bhgm39cl00000gn/T/ipykernel_88093/2521257058.py:12: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  return np.array([X_left, X_right])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 5850.994726399332\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_diabetes\n",
+    "X, y = load_diabetes(return_X_y=True)\n",
+    "y = y.reshape(-1,1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
+    "model = RegressionTree()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error:\", mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 6345.796992481203\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "reg = DecisionTreeRegressor()\n",
+    "reg.fit(X_train, y_train)\n",
+    "y_pred = reg.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error:\", mse)"
    ]
   }
  ],
