--- a/07_SVM/hard_margin_svm.ipynb
+++ b/07_SVM/hard_margin_svm.ipynb
@@ -90,6 +90,7 @@
     "        # 训练样本数和特征\n",
     "        m,n = X.shape\n",
     "\n",
+    "        # 1. 构造二次规划问题\n",
     "        # 初始化二次规划的相关变量 PqGh\n",
     "        self.P = matrix(np.identity(n+1, dtype=np.float))\n",
     "        self.q = matrix(np.zeros((n+1,), dtype=np.float))\n",
@@ -105,7 +106,7 @@
     "        # 构建二次规划求解\n",
     "        sol = solvers.qp(self.P, self.q, self.G, self.h)\n",
     "\n",
-    "        # 对weights和bias求最优解\n",
+    "        # 2. 获得超平面的weights和bias求最优解\n",
     "        self.w = np.zeros(n,)\n",
     "        self.b = sol['x'][0]\n",
     "        for i in range(1, n+1):\n",
